Prevent line breaks in dates and times

--- a/webroot/css/style.less
+++ b/webroot/css/style.less
@@ -1524,6 +1524,10 @@ table.calendar {
         &:nth-child(3) {
             padding-right: 15px;
         }
+        &.date,
+        &.time {
+            white-space: nowrap;
+        }
     }
     .author {
         color: #666;
